--- a/foundations/flex/02-flex-header/style.css
+++ b/foundations/flex/02-flex-header/style.css
@@ -1,6 +1,9 @@
 .header  {
   font-family: monospace;
   background: papayawhip;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
 }
 
 .logo {
@@ -9,17 +12,34 @@
   color: tomato;
   background: white;
   padding: 4px 32px;
+  margin: 4px 32px;
+  display: flex;
 }
 
 ul {
   /* this removes the dots on the list items*/
   list-style-type: none;
+  display: flex;
+  justify-content: space-evenly;
+
 }
 
 a {
   font-size: 22px;
   background: white;
-  padding: 8px;
+  padding: 9px;
+  margin: 20px;
   /* this removes the line under the links */
   text-decoration: none;
+  display: flex;
+  justify-content: space-evenly; 
+}
+
+left-links {
+  display: flex;
+  
+}
+
+right-links {
+  display: flex;
 }
